--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,12 @@ h6 {font-size: 2.2rem;}
 }
 
 .body {
-  border-radius: 25px;
+  border-radius: 10px;
   margin: 3rem 0;
   padding: 3rem 5rem;
-  background: #cdd2e0;
+  /* background: #cdd2e0; */
+  background: #f4eef64f;
+
   box-shadow: -10px 5px 4px #b1b5c0;
 }
 
@@ -60,6 +62,8 @@ h6 {font-size: 2.2rem;}
 }
 .marquee{
   margin-bottom:2rem;
+  color: rgb(52, 43, 41) ;
+  font-family: cursive;
   
 }
 
@@ -73,7 +77,7 @@ h6 {font-size: 2.2rem;}
   line-height: 2.8rem;
 }
 
-/* center drink image */
+/* center image */
 #drink-img{
   display: block;
   margin: 2rem auto 0 auto;
@@ -137,16 +141,27 @@ h6 {font-size: 2.2rem;}
 }
 
 .searchBar button {
-  border-radius: 0 25px 25px 0;
+ 
+  border-radius: 5px;
   cursor: pointer;
-  background: #B38C91;
-  font-weight: 700;
-  color: #000;
+  background: green;
+  font-weight: 500;
+  color: white;
+  border: none;
+}
+.searchBar button:hover{
+  color:white;
+  border-radius: 0 25px 25px 0;
+  background: tomato !important;
+
 }
 
 .searchBar input {
   width: 20rem;
-  border-radius: 25px 0 0 25px;
+  /* border-radius: 25px 0 0 25px; */
+  border-radius:  5px;
+  border: none;
+
   padding-left:1rem;
 }
 
@@ -218,16 +233,16 @@ main {
   display: -ms-flex;
   display: flex;
   justify-content:center;
-  margin: 3rem 0 1rem 0;
+  margin: 5rem 0 1rem 0;
 }
 
 #socials a {
   margin: 0 0.5rem;
-  color: #A6849D;
+  color: grey;
 }
 
 #socials a:hover {
-  color: #7DA3B0;
+color:tomato;
 }
 
 #copyright {
@@ -237,11 +252,11 @@ main {
 
 #copyright a {
   text-decoration: none;
-  color: #6E6E58;
+  color: grey;
 }
 
 #copyright a:hover {
-  color: #7DA3B0;
+  color: #2f464e;
   font-weight: 700;
 }
 
