--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ h6 {font-size: 2.2rem;}
 /* styling drink picture and title */
 .drink-container {
   width: 35rem;
-  background: #7da3b0;
+  background: #afb7ae61;
   border-radius: 25px;
   padding: 2rem;
   border-left: 2px solid rgba(255, 255, 255, 0.3);
@@ -190,7 +190,7 @@ h6 {font-size: 2.2rem;}
 
 /* instructions section */
 .instructions-container {
-  background: #b38c91;
+  background: #b38c919f;
   color: #000;
   margin-top: 4rem;
   box-shadow: -10px 5px 4px rgb(144, 106, 111);
